tests/invalid/MethodCall_Invalid_3.whiley
import * from whiley.lang.*

method main(System.Console sys, [string] this) -> void:
    this.f(1)
